:bug: fix: dropdown scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -138,3 +138,33 @@ input::-webkit-input-placeholder {
     rgba(0, 0, 0, 0) 100%
   );
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0007;
+  padding-left: 2px;
+  border-radius: 0.5rem;
+  transition: all 300ms ease-in-out;
+}
+
+/* Track on hover */
+::-webkit-scrollbar-track:hover {
+  background: #0003;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 0.5rem;
+  border: 5px solid transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb:hover {
+  background: #62519C66;
+}
